Refactoring invitation controller to receive a result from an action and render it Refactoring meeting controller to use an error serializer and allow meeting access of invitation with status accepted Add  maximum_participants and participants_count to meeting model Implement invitation methods to handle status change and update meeting participants count Add checking to meeting model to check if maximum participants limiting Refactoring invitation actions to return an instance of action result

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   meeting:
     welcome: "Welcome %{name}!"
+    invitation_not_accepted: "You must accept the invitation before access the meeting"
   time:
     formats:
       very_short: "%H:%M"
